deployments/deployment-nginx-dev.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nifi-nginx-proxy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nifi-nginx-proxy
  template:
    metadata:
      labels:
        app: nifi-nginx-proxy
    spec:
      containers:
        - name: nginx
          image: nginx:1.25-alpine
          ports:
            - containerPort: 80
          volumeMounts:
            - name: tls-certs
              mountPath: /etc/nginx/certs
              readOnly: true
            - name: nginx-conf
              mountPath: /etc/nginx/conf.d
      volumes:
        - name: nginx-conf
          configMap:
            name: nifi-nginx-conf
---
apiVersion: v1
kind: Service
metadata:
  name: nifi-nginx-proxy
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: 80
  selector:
    app: nifi-nginx-proxy
