deployments/ingress-nifi.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifikop
  # change namespace accordingly
  namespace: dev
  annotations:
    # set backend protocol as 'HTTPS' if you want SSL at ingress
    nginx.ingress.kubernetes.io/backend-protocol: HTTP
    nginx.ingress.kubernetes.io/ssl-passthrough: 'false'
    nginx.ingress.kubernetes.io/use-regex: 'true'
spec:
  ingressClassName: nginx
  # not needed if you want to terminate SSL or preserve SSL Termination at Ingress
  # tls:
  # - hosts:
  #     - myserver.example.com
  #   secretName: nifi-nginx-tls
  rules:
    - host: myserver.example.com
      http:
        paths:
          - path: /nifidev(/|$)(.*)
            pathType: ImplementationSpecific
            backend:
              service:
                name: nifi-nginx-proxy
                port:
                  # change port to 443 if you want to use SSL at ingress
                  number: 80
          # added below path for debugging
          - path: /vars
            pathType: Prefix
            backend:
              service:
                name: nifi-nginx-proxy
                port:
                  # change port to 443 if you want to use SSL at ingress
                  number: 80
