deployments/ingress-public.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nifikop
  namespace: dev
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: HTTPS
    nginx.org/lb-method: ip_hash
    nginx.org/ssl-services: nifikop
status:
  loadBalancer: {}
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - ih-nifi-qa.3sc.ai
      secretName: 3scs-tls
  rules:
    - host: ih-nifi-qa.3sc.ai
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: nifikop
                port:
                  number: 443
